# rust_python_sandwich

./: Cargo.toml  README.md
scripts/: hash.py  rand.py
src/: main.rs
